GNOME Bugzilla – Bug 754134
A few gdk backend fixes
Last modified: 2015-08-26 20:44:21 UTC
Here are a few straight forward fixes.
Created attachment 310048 [details] [review] gdk: fix memory corruption g_hash_table_replace will free the list pointer we're modifying. Let's just do memory management ourselves.
Created attachment 310049 [details] [review] gdk: master clock: fix incorrect symbol use
Review of attachment 310048 [details] [review]: Okay.
Review of attachment 310049 [details] [review]: Okay.
Review of attachment 310048 [details] [review]: Pushed to master
Review of attachment 310049 [details] [review]: Pushed to master